--- a/LegyenOnIsMilliomos/LegyenOnIsMilliomos.vcxproj.filters
+++ b/LegyenOnIsMilliomos/LegyenOnIsMilliomos.vcxproj.filters
@@ -42,4 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MainWindow.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
